# DCCMedusaPackager

./: .env  Jenkinsfile  MANIFEST.in  Makefile  MedusaPackager.html  README.rst  about.html  contents.html  cx_setup.py  deployment.yml  documentation.url  installation.html  make.bat  publishDocs.sh  py-modindex.html  requirements-dev.txt  requirements-freeze.txt  requirements.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html  usageCLI.html
CI/docker/deploy/devpi/test/windows/: Dockerfile
CI/docker/python/linux/: Dockerfile
CI/docker/python/windows/: Dockerfile
MedusaPackager/: MedusaPackager.py  __init__.py  __main__.py  __version__.py  packager.py  processcli.py
_sources/: about.txt  index.txt  usageCLI.txt
ci/docker/python/linux/tox/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/docker/shared/chocolatey/: packages.config
ci/jenkins/scripts/: tox.groovy
docs/: Makefile  make.bat
docs/source/: MedusaPackager.rst  conf.py  contents.rst  installation.rst  requirements.rst
docs/source/_static/: full_mark_horz_bw.eps
scripts/: process.py
tests/: junit-{envname}.xml  test_package_files.py
