[metadata]
name = MedusaPackager
version = 0.0.8
url = http://www.library.illinois.edu/dccdocs/DCCMedusaPackager/
download_url = https://github.com/UIUCLibrary/DCCMedusaPackager
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Script for packaging DCC files for ingesting into Medusa
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[options]
zip_safe = False

[sdist]
formats = gztar

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1